#VERSION 0.9.1#

 - deleted deprecated class Peak_View_Helper_Country 
 - added method getColunms() in Peak_Model_Zendatable
 - removed properties $_auto_describe and $_describe and method describe() in class Peak_Model_Zendatable.
   All those informations are already in the parent class, modified methods __construct() and cleanArray() accordingly
 - modified method redirectAction() to use method redirect() in Peak_Controller_Action
 - added $router property in Peak_Controller_Front, Router object is now also stored in the Front Controller, 
   modified Peak_Application accordingly
 - modified methods getSize() from class Peak_Spl_Dirinfo and Peak_Spl_Fileinfo
 - minor change to css in Peak_View_Helper_Debugbar
 - added method postDispatchController() in Peak_Controller_Front

#VERSION 0.9.0#

 - fixed problem with method getProperties() with value when class is abstract or is an interface in class Peak_Zreflection
 - rewrited method getConstants() from Peak_Zreflection
 - modified method getProperties() to retreive also values of properties in class Peak_Zreflection
 - fixed Peak_View_Helper_Debugbar by encoding html entities in html/js code data 
 - added new internal controller class named Peak_Controller_Internal_Pkdoc
 - added new class named Peak_Zreflection_Class
 - fixed some class name of Peak_View_Helper_*
 - removed static verification from getPropertyVisibility() and getMethodVisibility() and static status to
   getMethods() and getProperties() instead in class Peak_Zreflection
 - renamed view helpers classes debugbar and js based on framework class naming convention
 - changed vars print order in class View_Helper_Debugbar
 - fixed method getPropertiesByInheritance() following the change of getProperties() in Peak_Zreflection
 - rewrited completly getProperties() to return all infos of properties in array format in Peak_Zreflection
 - modified method docTagsToArray() to accept object or array of object in Peak_Zreflection