@@ -1,5 +1,10 @@
 #VERSION 0.9.1#
 
+ - fixed method isValid() from Peak_View_Cache to support custom cache id
+ - removed all shorcut methods about cache in Peak_View_Render
+ - renamed methods isCached() to isValid(), enableCacheStrip() to enableStrip(), isCachedBlock() to isValidBlock(),
+   cacheBlockEnd() to blockEnd() in Peak_View_Cache
+ - fixed bug in isCached() of class Peak_View_Cache
  - deleted deprecated class Peak_View_Helper_Country 
  - added method getColunms() in Peak_Model_Zendatable
  - removed properties $_auto_describe and $_describe and method describe() in class Peak_Model_Zendatable.
